# tmux-agent-prompts

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  demo.tape  main.sh  main.tmux  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  docs.yml  release.yml
prompts/: claude-code.json
scripts/: common.sh  fzf.sh  picker.sh  prompt-preview.sh  tmux.sh
src/tmux_agent_prompts/: __init__.py  cache.py  cli.py  models.py  registry.py  service.py
src/tmux_agent_prompts/adapters/: __init__.py  csv_source.py  json_source.py
tests/docs/: test_readme_contract.py
tests/integration/: conftest.py  test_dependencies.py  test_tmux_delivery.py
tests/shell/: fzf.bats  main_sh.bats  main_tmux.bats  picker.bats
tests/shell/helpers/: mock_bin.bash
tests/unit/: test_cache.py  test_cli.py  test_csv_source.py  test_json_source.py  test_models.py  test_registry.py  test_service.py
